Add unit tests for `CategoriesPage` and `CategoryForm`, refactor transaction proposal logic, and update CSV import service APIs